fix: Make popup graphic text more visible

--- a/public/styles/site/_popupgraphic.scss
+++ b/public/styles/site/_popupgraphic.scss
@@ -32,8 +32,8 @@
   #popupgraphic {
 	background-image: url("../../images/intro-pion.png");
 	#popupgraphic-button {
-	  font-size: 1em;
-	  padding: 0.75em;
+	  font-size: 0.75em;
+	  padding: 0.6em;
 	}
   }
 }
